# nonebot-plugin-updater

./: .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: release.yml  type_check.yml
nonebot_plugin_updater/: __init__.py  commands.py  config.py  updater.py
nonebot_plugin_updater/templates/: check_plugin_update.jinja2  plugin_info.jinja2
nonebot_plugin_updater/utils/: addition_for_htmlrender.py  comman.py  common.py  models.py  updater.py
