[project]
name = "nonebot-plugin-updater"
version = "0.2.4"
description = "一款全新的检测已安装插件更新情况的插件"
authors = [{ name = "hanasa2023", email = "hanasakayui2022@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "nonebot2>=2.3.3",
    "httpx>=0.27.2",
    "nonebot-plugin-alconna>=0.53.0",
    "toml>=0.10.2",
    "nonebot-plugin-htmlrender>=0.3.5",
    "packaging>=25.0",
]

[dependency-groups]
dev = [
    "mypy>=1.11.2,<2.0.0",
    "nonebot-adapter-onebot>=2.4.5,<3.0.0",
    "fastapi>=0.115.0,<0.116.0",
    "nonebot2[fastapi]>=2.3.3,<3.0.0",
    "types-toml>=0.10.8.20240310,<0.11.0",
    "types-tabulate>=0.9.0.20240106,<0.10.0",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"

[tool.ruff]
ignore = ["E402", "F401"]

[tool.ruff.format]
quote-style = "single"

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = []
plugin_dirs = [""]
builtin_plugins = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
